fixing typo in dockerfile

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,7 @@
 {
 	"name": "C++",
 	"build": {
-	  "dockerfile": "Dockerfile",
-	  "args": { 
-		"VARIANT": "ubuntu-22.04"
-	  }
+	  "dockerfile": "Dockerfile"
 	},
   
 	"image":"mcr.microsoft.com/devcontainers/cpp",
