--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,9 @@
 		  "extensions": ["ms-vscode.cpptools", 
 			"ms-vscode.cmake-tools",
 			"ms-vscode-remote.remote-containers",
-			"ms-azuretools.vscode-docker"]
+			"ms-azuretools.vscode-docker",
+		  	"ms-python.python"
+		  ]
 		}
 	  }
   }
