--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
   
 	"customizations": {
 	   "vscode": {
-		  "extensions": ["ms-vscode.cpptools", 
+		  "extensions": [
+			"ms-vscode.cpptools", 
 			"ms-vscode.cmake-tools",
 			"ms-vscode-remote.remote-containers",
 			"ms-azuretools.vscode-docker",
